--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,4 +6,5 @@
     <string name="hint_contact_phone">Номер телефона</string>
     <string name="button_text_contact_save">Сохранить</string>
     <string name="template_full_name">%2$s %1$s</string>
+    <string name="hint_search_name_surname">Искомое имя или фамилия</string>
 </resources>
