--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hint_contact_phone">Phone number</string>
     <string name="button_text_contact_save">Save</string>
     <string name="template_full_name">%1$s %2$s</string>
+    <string name="hint_search_name_surname">Name or surname to search</string>
 </resources>
